<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.pharmacyapp.ui.auth.LoginFragment"
        android:label="Вход"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_adminPanel"
            app:destination="@id/adminPanelFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.pharmacyapp.ui.auth.RegisterFragment"
        android:label="Регистрация"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pharmacyapp.ui.home.HomeFragment"
        android:label="Главная"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discounts"
        android:name="com.example.pharmacyapp.ui.discounts.DiscountsFragment"
        android:label="@string/nav_discounts">
        <action
            android:id="@+id/action_discounts_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.pharmacyapp.ui.payment.PaymentFragment"
        android:label="@string/payment_title"
        tools:layout="@layout/fragment_payment">
        <action
            android:id="@+id/action_payment_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.pharmacyapp.ui.history.HistoryFragment"
        android:label="@string/nav_history">
        <action
            android:id="@+id/action_history_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.pharmacyapp.ui.settings.SettingsFragment"
        android:label="@string/nav_settings">
        <action
            android:id="@+id/action_settings_to_profile"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_settings_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.pharmacyapp.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/adminPanelFragment"
        android:name="com.example.pharmacyapp.ui.admin.AdminPanelFragment"
        android:label="Панель администратора"
        tools:layout="@layout/fragment_admin_panel">
        <action
            android:id="@+id/action_adminPanel_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/adminPanelFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Global actions -->
    <action
        android:id="@+id/action_global_adminPanel"
        app:destination="@id/adminPanelFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true"
        app:launchSingleTop="true" />

    <action
        android:id="@+id/action_global_home"
        app:destination="@id/navigation_home"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true"
        app:launchSingleTop="true" />

</navigation> 